# snowflake-rs

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  publish.yml  publish_api.yml  publish_jwt.yml
jwt/: Cargo.toml  README.md
jwt/examples/: json_api.rs
jwt/src/: lib.rs
snowflake-api/: .gitignore  Cargo.toml  README.md
snowflake-api/examples/: filetransfer.rs  run_sql.rs  runtime_smol.rs
snowflake-api/examples/migrate/: Cargo.toml
snowflake-api/examples/migrate/src/: main.rs
snowflake-api/examples/migrate/tests/sql_migrations/: V2__create_table.sql  V3__role_create.sql
snowflake-api/examples/polars/: Cargo.toml
snowflake-api/examples/polars/src/: main.rs
snowflake-api/examples/tracing/: Cargo.toml
snowflake-api/examples/tracing/src/: main.rs
snowflake-api/src/: auth_response.rs  connection.rs  error_response.rs  helpers.rs  lib.rs  middleware.rs  migration.rs  polars.rs  put.rs  put_response.rs  query_response.rs  requests.rs  responses.rs  runtime.rs  session.rs  upload_files.rs
snowflake-jwt/: Cargo.toml
snowflake-jwt/examples/: run_sql.rs
snowflake-odbc-api/: Cargo.toml
snowflake-odbc-api/examples/: cert_auth.rs  filetransfer.rs  get_auth_token.rs  passwd_auth.rs  run_alt_api.rs  run_sql.rs
snowflake-odbc-api/src/: auth.rs  connection.rs  error_response.rs  lib.rs  put_response.rs  query_response.rs  request.rs  session.rs
snowflake-odbc-api/src/auth/: cert.rs  mod.rs  password.rs  response.rs
snowflake-rest-api/: Cargo.toml
snowflake-rest-api/examples/: run_sql.rs
snowflake-rest-api/src/: lib.rs  response.rs
