[package]
name = "snowflake-jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
sha2 = "0.10"
base64 = "0.21"
jsonwebtoken = "8"
openssl = "0.10"
serde = "1"
time = "0.3"

[dev-dependencies]
anyhow = "1"
ureq = { version = "2", features = ["json"] }
clap = { version = "4", features = ["derive"] }