[package]
name = "snowflake-jwt"
version = "0.1.1"
edition = "2021"
description = "Snowflake JWT token generator"
authors = ["Andrew Korzhuev <korzhuev@andrusha.me>", "Artem Semenov <hi@artps.org>"]
repository = "https://github.com/mycelial/snowflake-rs"
documentation = "http://docs.rs/snowflake-jwt/"
keywords = ["snowflake", "database", "api", "jwt"]
categories = ["cryptography"]
readme = "README.md"
license = "Apache-2.0"

[dependencies]
thiserror = "1"
sha2 = "0.10"
base64 = "0.21"
jsonwebtoken = "8"
openssl = "0.10"
serde = "1"
time = "0.3"

[dev-dependencies]
anyhow = "1"
ureq = { version = "2", features = ["json"] }
clap = { version = "4", features = ["derive"] }
