[package]
authors = [
    "Andrew Korzhuev <korzhuev@andrusha.me>",
    "Artem Semenov <hi@artps.org>",
]
categories = ["cryptography"]
description = "Snowflake JWT token generator"
documentation = "http://docs.rs/snowflake-jwt/"
edition = "2021"
keywords = ["snowflake", "database", "api", "jwt"]
license = "Apache-2.0"
name = "snowflake-jwt"
readme = "README.md"
repository = "https://github.com/mycelial/snowflake-rs"
version = "0.3.1"

[dependencies]
base64 = "0.22"
jsonwebtoken = "9"
rsa = "0.9"
serde = "1"
sha2 = "0.10"
thiserror = "1"
time = "0.3"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
