[package]
authors = ["Andrew Korzhuev <korzhuev@andrusha.me>"]
categories = ["api-bindings", "database"]
description = "Snowflake API bindings"
documentation = "http://docs.rs/sqlite-api/"
edition = "2021"
keywords = ["api", "database", "snowflake"]
license = "Apache-2.0"
name = "snowflake-api"
readme = "README.md"
repository = "https://github.com/mycelial/snowflake-rs"
version = "0.6.0"

[features]
default = ["cert-auth", "file"]
cert-auth = ["dep:snowflake-jwt"]
file = ["dep:glob", "dep:object_store"]

[dependencies]
arrow = "50"
async-trait = "0.1"
base64 = "0.21"
bytes = "1"
futures = "0.3"
log = "0.4"
object_store = { version = "0.9", optional = true, features = ["aws"] }
regex = "1"
reqwest = { version = "0.11", default-features = false, features = [
    "gzip",
    "json",
    "rustls-tls",
] }
reqwest-middleware = "0.2"
reqwest-retry = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2"
uuid = { version = "1", features = ["v4"] }
snowflake-jwt = { version = "0.3.0", optional = true }
glob = { version = "0.3", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
anyhow = "1"
arrow = { version = "50", features = ["prettyprint"] }
clap = { version = "4", features = ["derive"] }
pretty_env_logger = "0.5"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
