[package]
authors = ["Andrew Korzhuev <korzhuev@andrusha.me>"]
categories = ["api-bindings", "database"]
description = "Snowflake API bindings"
documentation = "http://docs.rs/sqlite-api/"
edition = "2021"
keywords = ["api", "database", "snowflake"]
license = "Apache-2.0"
name = "snowflake-api"
readme = "README.md"
repository = "https://github.com/mycelial/snowflake-rs"
version = "0.7.0"

[features]
default = ["cert-auth"]
all = ["cert-auth", "polars", "refinery"]
cert-auth = ["dep:snowflake-jwt"]
# support for conversion of arrow and json payloads to dataframes
polars = ["dep:polars-core", "dep:polars-io"]
refinery = ["dep:refinery-core", "dep:time", "dep:once_cell"]


[dependencies]
arrow = { version = "50", features = ["prettyprint"] }
async-trait = "0.1"
base64 = "0.21"
bytes = "1"
futures = "0.3"
log = "0.4"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = [
    "gzip",
    "json",
    "rustls-tls",
] }
reqwest-middleware = "0.2"
reqwest-retry = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2"
uuid = { version = "1", features = ["v4"] }
snowflake-jwt = { version = "0.3.0", optional = true }
tap = "1"

# polars-support
polars-io = { version = ">=0.32", features = [
    "json",
    "ipc_streaming",
], optional = true }
polars-core = { version = ">=0.32", optional = true }

# put request support
object_store = { version = "0.9", features = ["aws"] }
glob = { version = "0.3" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# migrations
refinery-core = { git = "https://github.com/wseaton/refinery", branch = "public-migration-applied", optional = true }
time = { version = "0.3.5", features = [
    "parsing",
    "formatting",
], optional = true }
once_cell = { version = "1", optional = true }

[dev-dependencies]
anyhow = "1"
arrow = { version = "50", features = ["prettyprint"] }
clap = { version = "4", features = ["derive"] }
pretty_env_logger = "0.5"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
