[package]
authors = ["Andrew Korzhuev <korzhuev@andrusha.me>"]
categories = ["api-bindings", "database"]
description = "Snowflake API bindings"
documentation = "http://docs.rs/sqlite-api/"
edition = "2021"
keywords = ["api", "database", "snowflake"]
license = "Apache-2.0"
name = "snowflake-api"
readme = "README.md"
repository = "https://github.com/mycelial/snowflake-rs"
version = "0.9.0"

[features]
all = ["cert-auth", "polars"]
cert-auth = ["dep:snowflake-jwt"]
default = ["cert-auth"]
# support for conversion of arrow and json payloads to dataframes
polars = ["dep:polars-core", "dep:polars-io"]

[dependencies]
arrow = "53"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
futures = "0.3"
log = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "gzip",
    "json",
    "rustls-tls",
] }
reqwest-middleware = { version = "0.3", features = ["json"] }
reqwest-retry = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snowflake-jwt = { version = "0.3", optional = true }
thiserror = "1"
url = "2"
uuid = { version = "1", features = ["v4"] }

# polars-support
polars-core = { version = ">=0.32", optional = true }
polars-io = { version = ">=0.32", features = [
    "json",
    "ipc_streaming",
], optional = true }

# put request support
glob = { version = "0.3" }
object_store = { version = "0.11", features = ["aws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
anyhow = "1"
arrow = { version = "53", features = ["prettyprint"] }
clap = { version = "4", features = ["derive"] }
pretty_env_logger = "0.5"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
