[package]
name = "snowflake-odbc-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
snowflake-jwt = { path = "../snowflake-jwt" }
ureq = { version = "2.5", features = ["json"] }
log = "0.4"
env_logger = "0.10"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
url = "2"
uuid = { version = "1.4", features = ["v1", "v4"] }
arrow = "42"
base64 = "0.21"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
arrow = { version = "42", features = ["prettyprint"] }
