[package]
edition = "2021"
name = "snowflake-rust-tracing"
version = "0.1.0"

[dependencies]
anyhow = "1"
arrow = { version = "52", features = ["prettyprint"] }
dotenv = "0.15"
snowflake-api = { path = "../../../snowflake-api" }

opentelemetry = "0.23"
opentelemetry-otlp = "0.16"
opentelemetry-semantic-conventions = "0.15"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
reqwest-middleware = "0.3"
reqwest-tracing = { version = "0.5", features = ["opentelemetry_0_21"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.24"
tracing-subscriber = "0.3"
